# Toy_with_ble

./: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old  size_output.csv
.github/workflows/: build_and_release.yml  ci.yml  esp_build.yml.yml
components/my_board/: CMakeLists.txt
main/: CMakeLists.txt
main/inc/: ble_app.h  common.h  crc16.h  downloader.h  esp_includes.h  initializer.h  iot_qbus.h  iot_qbus_port.h  led_app.h  log_app.h  main.h  player.h  qbus_s.h  sdcard.h  system.h  time_spent.h  wifi.h
main/src/: ble_app.cpp  crc16.cpp  downloader.cpp  initializer.cpp  iot_qbus.cpp  iot_qbus_port.cpp  led_app.cpp  main.cpp  player.cpp  qbus_s.cpp  sdcard.cpp  system.cpp  time_spent.cpp  wifi.cpp
